@@ -1,3 +1,8 @@
+Fri Aug 29 16:32:14 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/tag_prefixes.py: Regression test for bug with the
+	  tagspy.
+
 Fri Aug 29 15:57:48 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Add workaround for a bug in the
